--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -10,7 +10,7 @@
         <!--Login Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="LoginController" customModule="SustainabilityAppV1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="login" id="vXZ-lx-hvc" customClass="LoginController" customModule="SustainabilityAppV1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -116,9 +116,6 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="11"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="69" y="737" width="219" height="21"/>
-                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.65098039220000004" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -148,6 +145,9 @@
                                 <exclude reference="u5Z-pp-shY"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="PxB-RF-ED6"/>
+                                <exclude reference="kGu-9m-QQB"/>
+                                <exclude reference="mut-cF-hpx"/>
                                 <exclude reference="gER-lr-JnM"/>
                                 <exclude reference="z1M-PW-mbC"/>
                                 <exclude reference="r7b-x4-jNt"/>
@@ -158,9 +158,6 @@
                                 <exclude reference="uZD-jR-HyS"/>
                                 <exclude reference="ZAK-kI-y0r"/>
                                 <exclude reference="ufz-u2-GJf"/>
-                                <exclude reference="kGu-9m-QQB"/>
-                                <exclude reference="mut-cF-hpx"/>
-                                <exclude reference="PxB-RF-ED6"/>
                                 <exclude reference="nuJ-xg-dwC"/>
                             </mask>
                         </variation>
@@ -170,6 +167,9 @@
                                 <include reference="u5Z-pp-shY"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="PxB-RF-ED6"/>
+                                <include reference="kGu-9m-QQB"/>
+                                <include reference="mut-cF-hpx"/>
                                 <include reference="gER-lr-JnM"/>
                                 <include reference="z1M-PW-mbC"/>
                                 <include reference="r7b-x4-jNt"/>
@@ -180,9 +180,6 @@
                                 <include reference="uZD-jR-HyS"/>
                                 <include reference="ZAK-kI-y0r"/>
                                 <include reference="ufz-u2-GJf"/>
-                                <include reference="kGu-9m-QQB"/>
-                                <include reference="mut-cF-hpx"/>
-                                <include reference="PxB-RF-ED6"/>
                                 <include reference="nuJ-xg-dwC"/>
                             </mask>
                         </variation>
@@ -692,6 +689,7 @@
                         <viewControllerLayoutGuide type="bottom" id="XpV-I4-mhw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hFi-cx-TPW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -965,7 +963,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="QYY-GH-OmI" kind="relationship" relationship="rootViewController" id="Djp-fc-5Tp"/>
+                        <segue destination="TbU-JY-e6d" kind="relationship" relationship="rootViewController" id="IVP-Iw-wGF"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6e-YZ-3fW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1710,6 +1708,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Post" id="jpL-qv-gUP">
                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="wHx-s2-yGJ">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="done:" destination="TbU-JY-e6d" id="dHX-4Q-nmg"/>
                             </connections>
