--- a/SustainabilityAppV1/Base.lproj/LaunchScreen.xib
+++ b/SustainabilityAppV1/Base.lproj/LaunchScreen.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -22,10 +22,15 @@
                         <rect key="frame" x="123" y="84" width="154" height="61"/>
                     </variation>
                 </label>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="iLL-W5-Ro6">
+                    <rect key="frame" x="230" y="312" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="0.65098039220000004" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstAttribute="centerX" secondItem="iLL-W5-Ro6" secondAttribute="centerX" id="Gs7-OR-fIY"/>
                 <constraint firstAttribute="centerX" secondItem="r5s-Yl-3hQ" secondAttribute="centerX" id="Kif-jR-k6u"/>
+                <constraint firstItem="iLL-W5-Ro6" firstAttribute="top" secondItem="R8T-a6-DCE" secondAttribute="bottom" constant="8" id="Lut-yF-qu8"/>
                 <constraint firstAttribute="centerX" secondItem="R8T-a6-DCE" secondAttribute="centerX" id="UZu-Sp-KCd"/>
                 <constraint firstAttribute="centerY" secondItem="r5s-Yl-3hQ" secondAttribute="centerY" constant="50" id="X9l-U9-8wU"/>
                 <constraint firstAttribute="centerY" secondItem="R8T-a6-DCE" secondAttribute="centerY" constant="-10" id="dJa-ZD-zKm"/>
